--- a/less/style.less
+++ b/less/style.less
@@ -12,6 +12,7 @@ body {
   font-weight: 100;
   font-family: 'Lato';
   background-color: #F7F7F7;
+  color: #444;
 }
 
 .container {
@@ -24,10 +25,6 @@ body {
   text-align: center;
   display: inline-block;
   width: 100%;
-}
-
-.title {
-  font-size: 96px;
 }
 
 a:not(.button){
