--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,12 @@
 @import 'index.less';
+@import "fontawesome/font-awesome.less";
 
 html, body {
   height: 100%;
+}
+
+html, body, *{
+  box-sizing: border-box;
 }
 
 body {
