--- a/src/views/partials/APICall.ejs
+++ b/src/views/partials/APICall.ejs
@@ -1,4 +1,5 @@
 <div class="api-card">
+  <a class="fa fa-link without-underline api-link" aria-hidden="true" href="#<%= url %>" name="<%= url %>" alt="Direct link to this" title="Direct link to this"></a>
   <div class="api-path"><%= url %></div>
   <div class="api-desc"><%= desc %></div>
   <div class="api-params">
@@ -9,6 +10,6 @@
     </ul>
   </div>
   <div class="api-example">
-    <pre><%- JSON.stringify(example, null, '  ').trim('\r') %></pre>
+    <pre><%- example instanceof String ? exmaple : JSON.stringify(example, null, '  ').trim('\r') %></pre>
   </div>
 </div>
