--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -24,6 +24,10 @@
           <%- include('../partials/APICall', call) %>
         <% }) %>
         </div>
+        <div class="card">
+        Item names, icons, descriptions, and character information thereof are the sole property of NEXON and therefor applies to their Terms of Use.
+All in-game information is provided by a private source.
+        </div>
       </div>
     </div>
   </body>
