--- a/less/style.less
+++ b/less/style.less
@@ -13,17 +13,17 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  display: table;
   font-weight: 100;
-  font-family: 'Lato';
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: #F7F7F7;
-  color: #444;
+  color: rgba(255,255,255,.8);
+  text-rendering: optimizeLegibility;
 }
 
 .container {
   text-align: center;
-  display: table-cell;
   vertical-align: middle;
+  background: #111;
 }
 
 .content {
@@ -59,6 +59,7 @@ a:not(.button){
 .card-1 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  border-top: 3px solid #488AC7;
 }
 
 .card-1:hover, .card-1-hover {
