--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,6 @@
 .intro-card, .api-card, .card{
   .card-1;
-  background-color: #fff;
+  background-color: #2a2d32;
   padding: 15px;
   margin: 30px auto;
   font-size: 24px;
@@ -8,23 +8,27 @@
     .card-1-hover
   }
   width: 80%;
-  min-width: 800px;
+}
+
+.intro-card {
+  padding-bottom: 25px;
 }
 
 .title {
   font-size: 96px;
   margin-bottom: 90px;
+  font-weight: bold;
 }
 
-.title:before {
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 300px;
-  content: "";
-  z-index: -1;
-  top: 0;
-  box-shadow: 0 300px 0px #1589E4 inset;
+@media (max-width:768px) {
+  .title {
+    font-size: 36px;
+    margin-bottom: 90px;
+    font-weight: bold;
+  }
+  .sub-title {
+    font-size: 16px;
+  }
 }
 
 .api-calls{
@@ -34,8 +38,12 @@
     font-size: 16px;
     position: relative;
 
+    .get {
+      color: #faa61a;
+    }
+
     .api-link{
-      color: #333;
+      color: #488AC7;
       position: absolute;
       right: 15px;
       text-decoration: none;
@@ -84,15 +92,25 @@
 
     .api-example{
       &:before{
-        content: 'Example:';
+        display: flex;
+        align-items: center;
+        content: 'Example';
+        background: rgb(79, 84, 92);
+        padding-left: 8px;
+        margin: 5px 0 0 0;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        height: 36px;
+        color: rgba(255, 255, 255, 0.8);
       }
       pre{
-        background: #fbfaf8;
+        background: #0F0F0F;
         padding: .5rem;
-        border: 1px solid rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        margin: 5px 0 0 0;
-        overflow: hidden;
+        border: 2px solid rgb(79, 84, 92);
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+        margin: 0;
+        overflow: scroll;
       }
     }
   }
