--- a/src/views/partials/APICall.ejs
+++ b/src/views/partials/APICall.ejs
@@ -1,6 +1,6 @@
 <div class="api-card">
   <a class="fa fa-link without-underline api-link" aria-hidden="true" href="#<%= url %>" name="<%= url %>" alt="Direct link to this" title="Direct link to this"></a>
-  <div class="api-path"><%= url %></div>
+  <div class="api-path"><span class="get">GET</span> <%= url %></div>
   <div class="api-desc"><%= desc %></div>
   <div class="api-params">
     <ul>
