Correcting styling for text links

--- a/less/style.less
+++ b/less/style.less
@@ -35,20 +35,20 @@ body {
 a:not(.button){
   &:not(.without-underline){
     &:visited {
-      color: #333332;
+      color: rgba(255, 255, 255, 0.8);
     }
-    color: #333332;
+    color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
-    background: -webkit-linear-gradient(#fff,#fff),-webkit-linear-gradient(#fff,#fff),-webkit-linear-gradient(#333332,#333332);
-    background: -moz-linear-gradient(#fff,#fff),-moz-linear-gradient(#fff,#fff),-moz-linear-gradient(#333332,#333332);
-    background: -o-linear-gradient(#fff,#fff),-o-linear-gradient(#fff,#fff),-o-linear-gradient(#333332,#333332);
-    background: -ms-linear-gradient(#fff,#fff),-ms-linear-gradient(#fff,#fff),-ms-linear-gradient(#333332,#333332);
-    background: linear-gradient(#fff,#fff),linear-gradient(#fff,#fff),linear-gradient(#333332,#333332);
+    background: -webkit-linear-gradient(#2a2d32,#2a2d32),-webkit-linear-gradient(#2a2d32,#2a2d32),-webkit-linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8));
+    background: -moz-linear-gradient(#2a2d32,#2a2d32),-moz-linear-gradient(#2a2d32,#2a2d32),-moz-linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8));
+    background: -o-linear-gradient(#2a2d32,#2a2d32),-o-linear-gradient(#2a2d32,#2a2d32),-o-linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8));
+    background: -ms-linear-gradient(#2a2d32,#2a2d32),-ms-linear-gradient(#2a2d32,#2a2d32),-ms-linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8));
+    background: linear-gradient(#2a2d32,#2a2d32),linear-gradient(#2a2d32,#2a2d32),linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.8));
     -webkit-background-size: .05em 1px,.05em 1px,1px 1px;
     -moz-background-size: .05em 1px,.05em 1px,1px 1px;
     background-size: .05em 1px,.05em 1px,1px 1px;
     background-repeat: no-repeat,no-repeat,repeat-x;
-    text-shadow: .03em 0 #fff,-.03em 0 #fff,0 .03em #fff,0 -.03em #fff,.06em 0 #fff,-.06em 0 #fff,.09em 0 #fff,-.09em 0 #fff,.12em 0 #fff,-.12em 0 #fff,.15em 0 #fff,-.15em 0 #fff;
+    text-shadow: .03em 0 #2a2d32,-.03em 0 #2a2d32,0 .03em #2a2d32,0 -.03em #2a2d32,.06em 0 #2a2d32,-.06em 0 #2a2d32,.09em 0 #2a2d32,-.09em 0 #2a2d32,.12em 0 #2a2d32,-.12em 0 #2a2d32,.15em 0 #2a2d32,-.15em 0 #2a2d32;
     background-position: 0 87%,100% 87%,0 87%;
     padding: 2px 0;
     font-size: 24px;
