--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -26,8 +26,8 @@
           <span class="sub-title">The unofficial MapleStory API Documentation for developers.</span>
         </div>
         <div class="api-calls">
-          <div class="api-card">
-            We have a public discord here: <a href="https://discord.gg/WhmT8dU">https://discord.gg/WhmT8dU</a>!
+          <div class="card">
+            We have a public Discord here: <a href="https://discord.gg/WhmT8dU">https://discord.gg/WhmT8dU</a>!
           </div>
         <% calls.map(function(call){ %>
           <%- include('../partials/APICall', call) %>
